# vcpkg_helloworld_classic

./: CMakeLists.txt  CMakePresets.json  main.cpp  readme.md
